
Improved menu environment:
* Added new menu window type: ZX Vision. GUI Windows can be moved, resized, scrolled, minimized, closed, and change the focus to the background
* Warning and Error window messages now show an animation


Added key to save text windows contents to a file
Added setting to send a final space after every word in the osd adventure keyboard
Improved ZRCP:
-commands smartload and snapshot-load are more intelligent now
-running in verbose or limit mode, or cpu-step command, can now update the display inmediately (having real video setting on)
Improved vu-meters: high volumes are shown in red
Improved sprite viewer: you can view sprites up to 512x512

Improved disassemble window: 
*now you can export the disassemble to text file
*you can now see the full opcode when debugging Sinclair QL
*you can now show/hide hexadecimal dump of every opcode

Fixed visual glitches in some menus when Pentagon machine and real video: audio wave, visualmem, ay piano, wave piano, view sprites
Fixed visual glitches in some menus when interlaced enabled: audio wave, visualmem, ay piano, wave piano, view sprites
Fixed audio bug: sending a sample to the DAC by using Next registers, it wasn’t reseting the silence detection counter, so sound would probably be frozen (and repeated again, and again...)
Fixed autoload on tbblue (on normal and also fast boot mode)


Version 7.1. 24 September 2018 - 5th Anniversary edition

Yes, this is the 5th Anniversary edition, so, 5 years have passed since version 0.1: 24th September 2013 :))

Here is the changelog for version 7.1:

Added ACB/ABC/BAC/Custom AY Stereo emulation
Added joystick action to change emulated joystick type: Sinclair, Kempston, etc
Added Basic viewer for .bas basic files (plain ascii or Basic Spectrum data with tokens), .baszx80 (Basic ZX80 with tokens), .baszx81 (Basic ZX81 with tokens), Z88 basic files with tokens
Added Sped format file viewer
Added ZXUno DMA emulation. Added some dma demos to zxuno.mmc image